--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^6.8.1",
     "cssnano": "^5.1.10",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
@@ -26,6 +27,12 @@
     "gulp-terser-js": "^5.2.2",
     "gulp-webp": "^4.0.1",
     "sass": "^1.41.1",
-    "terser": "^5.14.2"
+    "style-loader": "^3.3.3",
+    "swiper": "^10.2.0",
+    "terser": "^5.14.2",
+    "webpack-stream": "^7.0.0"
+  },
+  "dependencies": {
+    "sweetalert2": "^11.7.31"
   }
 }
