--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Portfolio de Ivan Burgio",
   "main": "index.js",
   "scripts": {
-    "dev": "gulp dev"
+    "dev": "gulp dev",
+    "build": "gulp build"
   },
   "author": "",
   "license": "ISC",
